[auth] get GSuite organization from global-config (#9793)
* [auth] get GSuite organization from global-config

* fix

* fix

--- a/auth/deployment.yaml
+++ b/auth/deployment.yaml
@@ -71,6 +71,11 @@ spec:
             value: "{{ global.zone }}"
           - name: HAIL_DEFAULT_NAMESPACE
             value: "{{ default_ns.name }}"
+          - name: HAIL_GSUITE_ORGANIZATION
+            valueFrom:
+              secretKeyRef:
+                name: global-config
+                key: gsuite_organization
          resources:
            requests:
              memory: "250M"
@@ -173,6 +178,11 @@ spec:
             value: "{{ global.zone }}"
           - name: HAIL_DEFAULT_NAMESPACE
             value: "{{ default_ns.name }}"
+          - name: HAIL_GSUITE_ORGANIZATION
+            valueFrom:
+              secretKeyRef:
+                name: global-config
+                key: gsuite_organization
          resources:
            requests:
              memory: "250M"
