--- a/ci/test/resources/statefulset.yaml
+++ b/ci/test/resources/statefulset.yaml
@@ -53,7 +53,7 @@ spec:
              value: "{{ global.domain }}"
            - name: HAIL_DEPLOY_CONFIG_FILE
              value: /deploy-config/deploy-config.json
-           - name: SHA
+           - name: HAIL_SHA
              value: "{{ code.sha }}"
       volumes:
        - name: deploy-config
