--- a/router/router.nginx.conf.in
+++ b/router/router.nginx.conf.in
@@ -1,5 +1,5 @@
 server {
-    server_name @domain@ www.* site.*;
+    server_name @domain@ www.*;
 
     location = /healthcheck {
       return 204;
