--- a/gateway/deployment.yaml
+++ b/gateway/deployment.yaml
@@ -83,3 +83,18 @@ spec:
   selector:
     matchLabels:
       app: gateway
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: router
+  labels:
+    app: router
+spec:
+  ports:
+  - name: https
+    port: 443
+    protocol: TCP
+    targetPort: 443
+  selector:
+    app: router
