--- a/build.yaml
+++ b/build.yaml
@@ -411,7 +411,7 @@ steps:
     - name: auth-gsa-key
       namespace:
         valueFrom: default_ns.name
-      mountPath: /gsa-key
+      mountPath: /auth-gsa-key
    inputs:
      - from: /repo/ci/bootstrap_create_accounts.py
        to: /io/bootstrap_create_accounts.py
