--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -42,4 +42,4 @@ RUN git clone https://github.com/catchorg/Catch2.git && \
   cmake -Bbuild -H. -DBUILD_TESTING=OFF && \
   sudo cmake --build build/ --target install && \
   cd .. && \
-  rm -rf Catch2 && \
+  rm -rf Catch2
