--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -41,6 +41,6 @@ COPY pylintrc setup.cfg /
 RUN git clone https://github.com/catchorg/Catch2.git && \
   cd Catch2 && \
   cmake -Bbuild -H. -DBUILD_TESTING=OFF && \
-  sudo cmake --build build/ --target install && \
+  cmake --build build/ --target install && \
   cd .. && \
   rm -rf Catch2
