--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -13,7 +13,8 @@ RUN hail-apt-get-install \
     openjdk-8-jdk-headless \
     liblapack3 \
     g++-10 \
-    gcc-10
+    gcc-10 \
+    cmake
 
 RUN update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 10 && \
     update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 10
@@ -36,3 +37,10 @@ RUN wget -nv -O ${SPARK_HOME}/jars/gcs-connector-hadoop2-2.0.1.jar https://stora
 COPY docker/core-site.xml ${SPARK_HOME}/conf/core-site.xml
 
 COPY pylintrc setup.cfg /
+
+RUN git clone https://github.com/catchorg/Catch2.git --depth 1 --branch v2.13.3 && \
+  cd Catch2 && \
+  cmake -Bbuild -H. -DBUILD_TESTING=OFF && \
+  cmake --build build/ --target install && \
+  cd .. && \
+  rm -rf Catch2
