--- a/shuffler/deployment.yaml
+++ b/shuffler/deployment.yaml
@@ -48,10 +48,10 @@ spec:
              readOnly: true
           resources:
             requests:
-              memory: "3.75G"
-              cpu: "800m"
+              memory: 375Mi
+              cpu: 100m
             limits:
-              memory: "3.75G"
+              memory: 3750Mi
               cpu: "1"
       volumes:
        - name: deploy-config
