--- a/ci/test/resources/deployment.yaml
+++ b/ci/test/resources/deployment.yaml
@@ -26,8 +26,11 @@ spec:
           image: "{{ hello_image.image }}"
           resources:
             requests:
-              memory: "0.5G"
-              cpu: "0.5"
+              memory: 37Mi
+              cpu: 10m
+            limits:
+              memory: 375Mi
+              cpu: 100m
           ports:
             - containerPort: 5000
           livenessProbe:
