--- a/internal-gateway/deployment.yaml
+++ b/internal-gateway/deployment.yaml
@@ -37,8 +37,11 @@ spec:
          image: "{{ internal_gateway_image.image }}"
          resources:
            requests:
-             memory: "250M"
-             cpu: "200m"
+             memory: 375Mi
+             cpu: 100m
+           limits:
+             memory: 3750Mi
+             cpu: "1"
          ports:
           - containerPort: 80
          volumeMounts:
