--- a/auth/deployment.yaml
+++ b/auth/deployment.yaml
@@ -81,10 +81,15 @@ spec:
                 key: gsuite_organization
          resources:
            requests:
-             memory: "250M"
-             cpu: "100m"
+{% if deploy %}
+             memory: 375Mi
+             cpu: 100m
+{% else %}
+             memory: 37Mi
+             cpu: 10m
+{% endif %}
            limits:
-             memory: "1G"
+             memory: 3750Mi
              cpu: "1"
          volumeMounts:
           - name: deploy-config
@@ -191,10 +196,15 @@ spec:
                 key: gsuite_organization
          resources:
            requests:
-             memory: "250M"
-             cpu: "100m"
+{% if deploy %}
+             memory: 375Mi
+             cpu: 100m
+{% else %}
+             memory: 37Mi
+             cpu: 10m
+{% endif %}
            limits:
-             memory: "1G"
+             memory: 3750Mi
              cpu: "1"
          volumeMounts:
           - name: deploy-config
