--- a/router/deployment.yaml
+++ b/router/deployment.yaml
@@ -312,10 +312,15 @@ spec:
          image: {{ router_image.image }}
          resources:
            requests:
-             memory: "100M"
-             cpu: "100m"
+{% if deploy %}
+             memory: 375Mi
+             cpu: 100m
+{% else %}
+             memory: 37Mi
+             cpu: 10m
+{% endif %}
            limits:
-             memory: "250M"
+             memory: 3750Mi
              cpu: "1"
          env:
           - name: HAIL_DOMAIN
