[k8s] reduce scorecard to 10mCPU

--- a/scorecard/deployment.yaml
+++ b/scorecard/deployment.yaml
@@ -34,8 +34,8 @@ spec:
            value: "{{ global.domain }}"
         resources:
           requests:
-            memory: "500M"
-            cpu: "100m"
+            memory: 37Mi
+            cpu: 10m
         ports:
         - containerPort: 5000
         volumeMounts:
