--- a/benchmark-service/deployment.yaml
+++ b/benchmark-service/deployment.yaml
@@ -52,6 +52,10 @@ spec:
           - name: HAIL_BENCHMARK_BUCKET_NAME
             value: hail-test-dmk9z
 {% endif %}
+{% if scope == "dev" %}
+          - name: INSTANCE_ID
+            value: "R8kZlZhmqGJk"
+{% endif %}
           ports:
             - containerPort: 5000
           resources:
