--- a/memory/deployment.yaml
+++ b/memory/deployment.yaml
@@ -43,7 +43,7 @@ spec:
               memory: 187Mi
               cpu: 50m
             limits:
-              memory: 1875i
+              memory: 1875Mi
               cpu: 500m
           readinessProbe:
             exec:
