[docker] specify jedi version explicitly

--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -23,6 +23,7 @@ google-cloud-storage==1.25.0
 humanize==1.0.0
 hurry.filesize==0.9
 Jinja2==2.10.1
+jedi==0.17.2
 # keyrings.alt>3.1: https://bugs.launchpad.net/usd-importer/+bug/1794041/comments/6
 keyrings.alt>=3.1
 kubernetes-asyncio==9.1.0
