--- a/internal-gateway/deployment.yaml
+++ b/internal-gateway/deployment.yaml
@@ -37,8 +37,8 @@ spec:
          image: "{{ internal_gateway_image.image }}"
          resources:
            requests:
-             memory: 375Mi
-             cpu: 100m
+             memory: "250M"
+             cpu: "200m"
            limits:
              memory: 3750Mi
              cpu: "1"
