[query] add JVM to worker

--- a/build.yaml
+++ b/build.yaml
@@ -2126,6 +2126,7 @@ steps:
     - deploy_router
     - address_image
     - create_certs
+    - deploy_address_sa
  - kind: deploy
    name: deploy_query
    namespace:
