--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,8 @@
 name: CI
-on: [push, pull_request]
-
+on: 
+  push:
+    branches:
+      - main
 jobs:
   build-test-publish:
     # For tag pushes, we want to assure only the tag event triggers CI, not the accompanying commit:
@@ -29,7 +31,6 @@ jobs:
         run: conda build conda/$(basename $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')
 
       - name: Upload to anaconda package repository
-        if: "startsWith(github.ref, 'refs/tags/')"
         run: |
           anaconda -t ${{ secrets.ANACONDA_TOKEN }} \
           upload ${CONDA_PREFIX}/conda-bld/**/*.tar.bz2
