dont quote the numbers

--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -24,8 +24,8 @@ http {
 
   log_format json-log escape=json '{'
    '"message":"$scheme $request done in ${request_time}s: $status",'
-   '"response_status":"$status",'
-   '"request_duration":"$request_time",'
+   '"response_status":$status,'
+   '"request_duration":$request_time,'
    '"remote_address":"$remote_addr",'
    '"x_real_ip":"$http_x_real_ip",'
    '"request_start_time":"[$time_local]",'
