--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -1,4 +1,4 @@
-FROM gcr.io/{{ global.project }}/python:3.7-slim-stretch
+FROM {{ service_base_image.image }}
 
 COPY docker/hail-ubuntu/hail-apt-get-install /bin/hail-apt-get-install
 RUN echo "APT::Acquire::Retries \"5\";" > /etc/apt/apt.conf.d/80-retries && \
@@ -8,21 +8,8 @@ RUN echo "APT::Acquire::Retries \"5\";" > /etc/apt/apt.conf.d/80-retries && \
     curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
     hail-apt-get-install fuse gcsfuse
 
-COPY docker/hail-ubuntu/pip.conf /root/.config/pip/pip.conf
-COPY docker/hail-ubuntu/hail-pip-install /bin/hail-pip-install
-RUN python3 -m pip install --upgrade --no-cache-dir pip
-
-COPY docker/requirements.txt .
-RUN hail-pip-install -r requirements.txt
-
-COPY hail/python/setup-hailtop.py /hailtop/setup.py
-COPY hail/python/hailtop /hailtop/hailtop/
-RUN hail-pip-install --no-deps /hailtop && rm -rf /hailtop
-
-COPY gear/setup.py /gear/setup.py
-COPY gear/gear /gear/gear/
-RUN hail-pip-install --no-deps /gear && rm -rf /gear
-
 COPY batch/setup.py batch/MANIFEST.in /batch/
 COPY batch/batch /batch/batch/
 RUN hail-pip-install --no-deps /batch && rm -rf /batch
+
+COPY batch/hail.jar /
