remove brackets around time field

--- a/blog/nginx.conf
+++ b/blog/nginx.conf
@@ -27,7 +27,7 @@ http {
    '"request_duration":$request_time,'
    '"remote_address":"$remote_addr",'
    '"x_real_ip":"$http_x_real_ip",'
-   '"request_start_time":"[$time_local]",'
+   '"request_start_time":"$time_local",'
    '"body_bytes_sent":"$body_bytes_sent",'
    '"http_referer":"$http_referer",'
    '"http_user_agent":"$http_user_agent"'
