--- a/.github/workflows/condarize.yaml
+++ b/.github/workflows/condarize.yaml
@@ -1,12 +1,35 @@
 name: CI
-on: 
+on:
   push:
     branches:
       - main
 jobs:
-  build-test-publish:
+  set_conda_pkg_version:
     # For tag pushes, we want to assure only the tag event triggers CI, not the accompanying commit:
     if: "! startsWith(github.event.head_commit.message, 'Bump ') || startsWith(github.ref, 'refs/tags/')"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@main
+
+      - name: Fix meta YAML
+        run: |
+          MKFILE=hail/Makefile
+          MAJOR_MINOR=$(grep -Po 'HAIL_MAJOR_MINOR_VERSION := \K.*(?=)' ${MKFILE})
+          PATCH=$(grep -Po 'HAIL_PATCH_VERSION := \K.*(?=)' ${MKFILE})
+          VERSION=${MAJOR_MINOR}.${PATCH}.dev${GITHUB_SHA:0:7}
+          cat conda/hail/meta-template.yaml \
+          | sed s/{version}/${VERSION}/ > conda/hail/meta.yaml
+
+      - name: Upload meta YAML for build job
+        uses: actions/upload-artifact@v2
+        with:
+          name: meta.yaml
+          path: conda/hail/meta.yaml
+
+  condarize:
+    # For tag pushes, we want to assure only the tag event triggers CI, not the accompanying commit:
+    if: "! startsWith(github.event.head_commit.message, 'Bump ') || startsWith(github.ref, 'refs/tags/')"
+    needs: set_conda_pkg_version
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
@@ -16,6 +39,15 @@ jobs:
         shell: bash -l {0}
     steps:
       - uses: actions/checkout@main
+
+      - name: Download meta YAML
+        uses: actions/download-artifact@v2
+        with:
+          name: meta.yaml
+          path: conda/hail/
+
+      - name: Test artefacts
+        run: cat conda/hail/meta.yaml
 
       - uses: conda-incubator/setup-miniconda@v2
         with:
@@ -27,19 +59,10 @@ jobs:
       - name: Setup build env
         run: conda install pip conda-build anaconda-client
 
-      - name: Fix version
-        run: |
-          MKFILE=hail/Makefile
-          MAJOR_MINOR=$(grep -Po 'HAIL_MAJOR_MINOR_VERSION := \K.*(?=)' ${MKFILE})
-          PATCH=$(grep -Po 'HAIL_PATCH_VERSION := \K.*(?=)' ${MKFILE})
-          VERSION=${MAJOR_MINOR}.${PATCH}.dev${GITHUB_SHA:0:7}
-          cat conda/hail/meta-template.yaml \
-          | sed s/{version}/${VERSION}/ > conda/hail/meta.yaml
-
       - name: Build package
         run: conda build conda/hail
 
       - name: Upload to anaconda package repository
         run: |
-          anaconda -t ${{ secrets.ANACONDA_TOKEN }} --force \
+          anaconda -t ${{ secrets.ANACONDA_TOKEN }} \
           upload ${CONDA_PREFIX}/conda-bld/**/*.tar.bz2
