--- a/.github/workflows/condarize.yaml
+++ b/.github/workflows/condarize.yaml
@@ -1,8 +1,7 @@
-name: CI
+name: Condarize
 on: [push, pull_request]
-
 jobs:
-  set_conda_pkg_version:
+  set-conda-pkg-version:
     # For tag pushes, we want to assure only the tag event triggers CI, not the accompanying commit:
     if: "! startsWith(github.event.head_commit.message, 'Bump ') || startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
@@ -24,10 +23,10 @@ jobs:
           name: meta.yaml
           path: conda/hail/meta.yaml
 
-  condarize:
+  build-publish:
     # For tag pushes, we want to assure only the tag event triggers CI, not the accompanying commit:
     if: "! startsWith(github.event.head_commit.message, 'Bump ') || startsWith(github.ref, 'refs/tags/')"
-    needs: set_conda_pkg_version
+    needs: set-conda-pkg-version
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
