--- a/build.yaml
+++ b/build.yaml
@@ -2071,7 +2071,7 @@ steps:
      from hailtop.utils import async_to_blocking
      from hailtop.batch_client.aioclient import BatchClient
      async def create(billing_project, user, limit=None):
-         bc = await BatchClient(None)
+         bc = BatchClient(None)
          try:
              try:
                  await bc.create_billing_project(billing_project)
