--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [flake8]
 # E501 line too long
+# E203 whitespace before ':'
 # W503 line break before binary operator
 # E722 do not use bare 'except'
-ignore=E501,W503,E722
+ignore=E203,E501,W503,E722
 
 # E402 module level import not at top of file
 # E241 multiple spaces after ','
