--- a/libhail/Makefile
+++ b/libhail/Makefile
@@ -1,4 +1,4 @@
-CPP_FILES = src/hail/main.cpp src/hail/format.cpp src/hail/type.cpp src/hail/allocators.cpp src/hail/value.cpp src/hail/ptype.cpp
+CPP_FILES = src/hail/main.cpp src/hail/format.cpp src/hail/type.cpp src/hail/allocators.cpp src/hail/value.cpp src/hail/ptype.cpp src/hail/ir.cpp
 HPP_FILES = src/hail/allocators.hpp src/hail/format.hpp src/hail/tunion.hpp src/hail/type.hpp
 
 main: $(CPP_FILES) $(HPP_FILES)
