wip; compiles again (not that it does anything)

--- a/libhail/CMakeLists.txt
+++ b/libhail/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(main
   src/hail/vtype.cpp
   # query
   src/hail/query/ir.cpp
+  src/hail/query/ir_type.cpp
   src/hail/query/backend/jit.cpp
   src/hail/query/backend/stype.cpp
   src/hail/query/backend/svalue.cpp)
