--- a/libhail/CMakeLists.txt
+++ b/libhail/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(main
   # query
   src/hail/query/ir.cpp
   src/hail/query/ir_type.cpp
+  src/hail/query/backend/compile.cpp
   src/hail/query/backend/jit.cpp
   src/hail/query/backend/stype.cpp
   src/hail/query/backend/svalue.cpp)
