[letsencrypt] fix letsencrypt
Installing certbot is hard so I stopped doing that. Instead, I use the cerbot docker image.

I also eliminated `sed` from the letsencrypt Makefile.

We now maintain the options-ssl-nginx.conf file ourselves. I copied the settings from
GitHub. They're straightforward, as a part of regular package versioning maintenance we should also
reconsider our cipher suites and TLS versions.

--- a/letsencrypt/Makefile
+++ b/letsencrypt/Makefile
@@ -3,21 +3,10 @@ include ../config.mk
 LETSENCRYPT_LATEST = gcr.io/$(PROJECT)/letsencrypt:latest
 LETSENCRYPT_IMAGE = gcr.io/$(PROJECT)/letsencrypt:$(shell docker images -q --no-trunc letsencrypt | sed -e 's,[^:]*:,,')
 
-STATIC_CONFIG = letsencrypt-pod.yaml letsencrypt.sh
+.PHONY: build push start-service run clean
 
-.PHONY: $(STATIC_CONFIG) build push start-service run clean
-
-$(STATIC_CONFIG): %: %.in
-	sed -e "s,@project@,$(PROJECT),g" \
-	  -e "s;@domains@;$(shell paste -s -d, domains.txt);g" \
-	  -e "s,@domain@,$(DOMAIN),g" \
-	  -e "s,@ip@,$(IP),g" \
-	  < $< > $@
-
-build: letsencrypt.sh
-	$(MAKE) -C ../docker hail-ubuntu
-	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"hail-ubuntu"}}' Dockerfile Dockerfile.out
-	docker build -f Dockerfile.out -t letsencrypt --cache-from letsencrypt,$(LETSENCRYPT_LATEST),hail-ubuntu .
+build:
+	docker build -f Dockerfile -t letsencrypt --cache-from letsencrypt,$(LETSENCRYPT_LATEST) .
 
 push: build
 	docker tag letsencrypt $(LETSENCRYPT_LATEST)
@@ -25,11 +14,13 @@ push: build
 	docker tag letsencrypt $(LETSENCRYPT_IMAGE)
 	docker push $(LETSENCRYPT_IMAGE)
 
-start-service: service.yaml
+start-service:
 	kubectl -n default apply -f service.yaml
 
-run: letsencrypt-pod.yaml service.yaml push
-	python3 ../ci/jinja2_render.py '{"letsencrypt_image":{"image":"$(LETSENCRYPT_IMAGE)"}}' letsencrypt-pod.yaml letsencrypt-pod.yaml.out
+DRY_RUN ?= false
+run: push
+	python3 ../ci/jinja2_render.py '{"domain":"$(DOMAIN)"}' domains.txt domains.txt.out
+	python3 ../ci/jinja2_render.py '{"letsencrypt_image":{"image":"$(LETSENCRYPT_IMAGE)"},"domain":"$(DOMAIN)","domains":"$(shell paste -s -d, domains.txt.out)","dry_run":$(DRY_RUN)}' letsencrypt-pod.yaml letsencrypt-pod.yaml.out
 	/bin/bash run-letsencrypt.sh
 
 clean:
