--- a/router/deployment.yaml
+++ b/router/deployment.yaml
@@ -271,6 +271,17 @@ spec:
   selector:
     app: atgu
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: grafana
+spec:
+  ports:
+   - port: 80
+     targetPort: 3000
+  selector:
+    app: grafana
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
