--- a/.github/workflows/condarise.yaml
+++ b/.github/workflows/condarise.yaml
@@ -2,7 +2,7 @@ name: Condarise
 on: [push, pull_request]
 jobs:
   set-conda-pkg-version:
-    # For tag pushes, we want to assure only the tag event triggers CI, not the accompanying commit:
+    # Run for tags only
     if: "startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
     steps:
@@ -24,7 +24,7 @@ jobs:
           path: conda/hail/meta.yaml
 
   build-publish:
-    # For tag pushes, we want to assure only the tag event triggers CI, not the accompanying commit:
+    # Run for tags only
     if: "startsWith(github.ref, 'refs/tags/')"
     needs: set-conda-pkg-version
     strategy:
