Conda pkg: fix for hailctl (#22)
* For building cpg conda package, skip uploading artefacts and use the official packages ones

--- a/hail/Makefile
+++ b/hail/Makefile
@@ -214,6 +214,11 @@ CLOUD_SUB_FOLDER := $(HAIL_PIP_VERSION)
 UPLOAD_RETENTION = gsutil -m retention temp set "$(cloud_base)/*"
 endif
 
+ifdef SKIP_UPLOAD_ARTIFACTS
+DEV_CLARIFIER =
+CLOUD_SUB_FOLDER := $(HAIL_PIP_VERSION)
+endif
+
 HAILCTL_BUCKET_BASE ?= gs://hail-common/hailctl/dataproc
 
 cloud_base := $(HAILCTL_BUCKET_BASE)/$(DEV_CLARIFIER)$(CLOUD_SUB_FOLDER)
@@ -255,7 +260,11 @@ install-on-cluster: $(WHEEL)
 	$(PIP) install $(WHEEL) --no-deps
 
 .PHONY: install-hailctl
+ifdef SKIP_UPLOAD_ARTIFACTS
+install-hailctl: install
+else
 install-hailctl: install upload-artifacts
+endif
 
 .PHONY: test-dataproc
 test-dataproc: install-hailctl
