--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -1,4 +1,17 @@
-FROM {{ service_base_image.image }}
+FROM gcr.io/{{ global.project }}/python:3.7-slim-stretch
+
+COPY pip.conf /root/.config/pip/pip.conf
+COPY docker/hail-ubuntu/hail-pip-install /bin/hail-pip-install
+COPY docker/requirements.txt .
+RUN hail-pip-install -r requirements.txt pyspark==2.4.0
+
+ENV SPARK_HOME /usr/local/lib/python3.7/site-packages/pyspark
+ENV PATH "$PATH:$SPARK_HOME/sbin:$SPARK_HOME/bin"
+ENV PYSPARK_PYTHON python3
+
+COPY batch/download-gcs-connector.py /
+RUN python3 /download-gcs-connector.py
+COPY docker/core-site.xml ${SPARK_HOME}/conf/core-site.xml
 
 COPY docker/hail-ubuntu/hail-apt-get-install /bin/hail-apt-get-install
 RUN echo "APT::Acquire::Retries \"5\";" > /etc/apt/apt.conf.d/80-retries && \
@@ -7,6 +20,18 @@ RUN echo "APT::Acquire::Retries \"5\";" > /etc/apt/apt.conf.d/80-retries && \
     echo "deb http://packages.cloud.google.com/apt $GCSFUSE_REPO main" | tee /etc/apt/sources.list.d/gcsfuse.list && \
     curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
     hail-apt-get-install fuse gcsfuse
+
+COPY docker/hail-ubuntu/pip.conf /root/.config/pip/pip.conf
+COPY docker/hail-ubuntu/hail-pip-install /bin/hail-pip-install
+RUN python3 -m pip install --upgrade --no-cache-dir pip
+
+COPY hail/python/setup-hailtop.py /hailtop/setup.py
+COPY hail/python/hailtop /hailtop/hailtop/
+RUN hail-pip-install --no-deps /hailtop && rm -rf /hailtop
+
+COPY gear/setup.py /gear/setup.py
+COPY gear/gear /gear/gear/
+RUN hail-pip-install --no-deps /gear && rm -rf /gear
 
 COPY batch/setup.py batch/MANIFEST.in /batch/
 COPY batch/batch /batch/batch/
