Restore create_database_server_config dep.

--- a/build.yaml
+++ b/build.yaml
@@ -273,6 +273,7 @@ steps:
    dependsOn:
     - default_ns
     - copy_files
+    - create_database_server_config
     - delete_auth_tables
  - kind: runImage
    name: create_deploy_config
