Fix server name in gateway.

--- a/gateway/gateway.nginx.conf
+++ b/gateway/gateway.nginx.conf
@@ -23,7 +23,7 @@ map $maybe_router_scheme $router_scheme {
 }
 
 server {
-    server_name internal.hail.is;
+    server_name internal.hail.populationgenomics.org.au;
     client_max_body_size 8m;
 
     location = /auth {
@@ -57,6 +57,12 @@ server {
         # include /ssl-config/ssl-config-proxy.conf
     }
 
+    error_page 401 = @error401;
+
+    location @error401 {
+        return 302 https://auth.populationgenomics.org.au/login?next=https://$http_host$request_uri;
+    }
+
     listen [::]:443 ssl;
     listen 443 ssl;
     ssl_certificate /etc/letsencrypt/fullchain.pem;
@@ -66,7 +72,7 @@ server {
 }
 
 server {
-    server_name hail.is;
+    server_name hail.populationgenomics.org.au;
     client_max_body_size 8m;
 
     location / {
