--- a/gateway/gateway.nginx.conf
+++ b/gateway/gateway.nginx.conf
@@ -60,7 +60,7 @@ server {
     error_page 401 = @error401;
 
     location @error401 {
-        return 302 https://auth.populationgenomics.org.au/login?next=https://$http_host$request_uri;
+        return 302 https://auth.hail.populationgenomics.org.au/login?next=https://$http_host$request_uri;
     }
 
     listen [::]:443 ssl;
